# ghidra-mcp

./: AGENTS.md  README.md  pyproject.toml
