[project]
name = "ghidra-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0,<2",
    "requests>=2,<3",
]

[project.scripts]
ghidra-mcp = "main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
